# Autemp

./: AggregateState.H  CMakeLists.txt  README.md
PredicatesAndExpressions/: CMakeLists.txt
src/: .FunPred.H.swp  BufferList.H  CMakeLists.txt  GroupByBox.H  NewState.H  State.H  State.cpp  TrashState.cpp  main.cpp
src/PredicatesAndExpressions/: CMakeLists.txt  FieldExt.cpp  FloatAbsoluteFunction.cpp  Function.H  Mitre1AF.cpp  Timestamp.H
